js fix vh on iOS

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -39,7 +39,7 @@ body
 	font-size 1.6vw
 	line-height 1
 	+below($tablet)
-		font-size 1.8rem
+		font-size 1.8rem !important
 
 p
 	margin-bottom 1em
@@ -194,7 +194,7 @@ header
 		+below($tablet)
 			top ($padding / 2)
 			right ($padding / 2)
-			font-size 2rem
+			font-size 2rem !important
 
 #container
 	margin-top 11rem
